--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^12.7.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "suncalc": "^1.9.0",
