--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "jspdf": "^4.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
