--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
+    "stripe": "^20.1.2",
     "suncalc": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
