--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@stripe/stripe-js": "^8.6.1",
+    "@supabase/supabase-js": "^2.39.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^12.7.0",
+    "dotenv": "^17.2.3",
+    "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "jspdf": "^4.0.0",
     "react": "^19.2.3",
